--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #f9f7fe;
+  background-color: rgb(195, 248, 255);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
