--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,12 @@
 body {
-  background-color: rgb(195, 248, 255);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto Serif", serif;
 }
 
 h1 {
   text-align: center;
   font-size: 35px;
+  
+  
 }
 
 select {
@@ -13,21 +14,28 @@ select {
   width: 100%;
   font-size: 18px;
   border-radius: 5px;
+  border-color: #8f8787;
   padding: 10px;
+  background-color: white;
+ 
 }
 
 h2 {
   margin: 0 0 5px;
   font-size: 28px;
+  
 }
 
 .container {
   max-width: 600px;
   margin: 60px auto;
-  background: white;
+  margin-bottom: 20px;
   padding: 30px;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   border-radius: 10px;
+  background-color: #cadefc;
+  background-size:cover;
+  box-sizing:border-box;
 }
 
 .date {
@@ -38,7 +46,7 @@ h2 {
   margin: 10px 0;
   justify-content: space-between;
   padding: 30px 0;
-  border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+  border-bottom: 1px dashed #8f8787;
 }
 
 .city:last-child {
@@ -48,6 +56,7 @@ h2 {
 .time {
   font-size: 48px;
   font-weight: bold;
+  
 }
 
 .time small {
@@ -58,5 +67,9 @@ h2 {
 footer {
   text-align: center;
   font-size: 18px;
-  color: rgba(0, 0, 0, 0.8);
+  
+}
+
+a{
+  color: black;
 }
